--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,18 @@
+#--------------------------------redis相关配置------------------------------------#
+spring.redis.database = 0
+spring.redis.host = 116.255.226.249
+spring.redis.port = 6379
+spring.redis.password = fmjt0329
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active = 200
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait = -1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle = 10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle = 0
+# 连接超时时间（毫秒）
+spring.redis.timeout = 1000
 #--------------------------------mysql相关配置------------------------------------#
 #useUnicode=true&characterEncoding=utf8(必填)设置字符集
 #serverTimezone=Asia/Shanghai(springboot必填)设置时区
