--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 #--------------------------------redis相关配置------------------------------------#
 spring.redis.database = 0
-spring.redis.host = 116.255.226.249
+spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
-spring.redis.password = fmjt0329
+spring.redis.password = pope0912
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active = 200
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
