--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,23 @@
             <version>2.7.0</version>
         </dependency>
 
+        <!-- POI -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-contrib</artifactId>
+            <version>3.6</version>
+        </dependency>
+
         <!--工作流-->
       <!--  <dependency>
             <groupId>org.activiti</groupId>
