--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,37 @@
 #应用名称
-spring.application.name = dome-yangk
-
+spring.application.name=dome-yangk
 #端口
 server.port=8083
-
 #环境
-spring.profiles.active = dev
-
+spring.profiles.active=dev
 #mybatis配置
-mybatis.mapper-locations = classpath*:mapper/**/*.xml
-mybatis.type-aliases-package = com.yangk.demoproject.model
+mybatis.mapper-locations=classpath*:mapper/**/*.xml
+mybatis.type-aliases-package=com.yangk.demoproject.model
 #将带有下划线的表字段映射为驼峰格式的实体类属性
-mybatis.configuration.map-underscore-to-camel-case = true
+mybatis.configuration.map-underscore-to-camel-case=true
 #控制台打印mybatis日志
-mybatis.configuration.log-impl = org.apache.ibatis.logging.stdout.StdOutImpl
-
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #通用Mapper
-mapper.identity = MYSQL
-mapper.mappers = com.yangk.demoproject.common.mapper.TkMybatisMapper
-
+mapper.identity=MYSQL
+mapper.mappers=com.yangk.demoproject.common.mapper.TkMybatisMapper
 #防止bean重复定义
-spring.main.allow-bean-definition-overriding = true
-
-
-
+spring.main.allow-bean-definition-overriding=true
 #使用阿里的fastJson时必须配置此项，不然会乱码
-spring.http.encoding.force = true
-spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
+spring.http.encoding.force=true
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Shanghai
-
 #---------------------------------工作流相关配置Start...-----------------#
 #自动检查、部署流程定义文件
 spring.activiti.check-process-definitions=false
 #每次应用启动不检查Activiti数据表是否存在及版本号是否匹配 第一次设置为true 会自动创建表结构，之后即可设置为false 提高运行速度
-spring.activiti.database-schema-update = false
+spring.activiti.database-schema-update=false
 #asyncExecutorActivate是指示activiti在流程引擎启动就激活AsyncExecutor,异步
-spring.activiti.async-executor-activate = false
+spring.activiti.async-executor-activate=false
 #保存历史数据级别设置为full最高级别，便于历史数据的追溯
 #spring.activiti.history-level = full
 #流程定义文件存放目录
 #spring.activiti.process-definition-location-prefix = classpath:/processes/
 #---------------------------------工作流配置End...-----------------#
-
+FLOW_LEAVE_KEY=32501
 #--------------------------配置跳过验证的URL---------------#
-ignore.auth.urls = "/favicon.ico", "/login", "/login/page", "/webjars/**", "*.js", "*.css"
+ignore.auth.urls="/favicon.ico", "/login", "/login/page", "/webjars/**", "*.js", "*.css"
