--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,40 +1,43 @@
 #--------------------------------redis相关配置------------------------------------#
-spring.redis.database = 0
-spring.redis.host = 127.0.0.1
-spring.redis.port = 6379
-spring.redis.password = pope0912
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=pope0912
 # 连接池最大连接数（使用负值表示没有限制）
-spring.redis.jedis.pool.max-active = 200
+spring.redis.jedis.pool.max-active=200
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.jedis.pool.max-wait = -1
+spring.redis.jedis.pool.max-wait=-1
 # 连接池中的最大空闲连接
-spring.redis.jedis.pool.max-idle = 10
+spring.redis.jedis.pool.max-idle=10
 # 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle = 0
+spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
-spring.redis.timeout = 1000
+spring.redis.timeout=1000
 #--------------------------------mysql相关配置------------------------------------#
 #useUnicode=true&characterEncoding=utf8(必填)设置字符集
 #serverTimezone=Asia/Shanghai(springboot必填)设置时区
 #useSSL=true 你的JDBC版本与MySQL版本不兼容，MySQL的版本更高，在连接语句后加上“useSSL=‘true’” ，就可以连接到数据库更高版本
-spring.datasource.url = jdbc:mysql://localhost:3306/yangkdb?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/yangkdb?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+spring.datasource.username=root
+spring.datasource.password=root
+########  mysql Driver
+#spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+########  mysql 8.0 + Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #连接池配置(springboot默认com.zaxxer.hikari.HikariDataSource)
-spring.datasource.type = com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.pool-name = KevinHikariPool
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.pool-name=KevinHikariPool
 #最小空闲连接，默认值10，小于0或大于maximum-pool-size，都会重置为maximum-pool-size
-spring.datasource.hikari.minimum-idle = 5
+spring.datasource.hikari.minimum-idle=5
 #最大连接数，小于等于0会被重置为默认值5；大于零小于1会被重置为minimum-idle的值
-spring.datasource.hikari.maximum-pool-size = 200
+spring.datasource.hikari.maximum-pool-size=200
 #只有空闲连接数大于最大连接数且空闲时间超过该值，才会被释放
-spring.datasource.hikari.idle-timeout = 500000
+spring.datasource.hikari.idle-timeout=500000
 #连接最大存活时间.不等于0且小于30秒，会被重置为默认值30分钟.设置应该比mysql设置的超时时间短
-spring.datasource.hikari.max-lifetime = 540000
-spring.datasource.hikari.connection-timeout = 30000
-spring.datasource.hikari.connection-test-query = SELECT 1
-
+spring.datasource.hikari.max-lifetime=540000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
 #配置JPA：updata:没有表新建，有表更新操作,控制台显示建表语句
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
