小修改 + 上传

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,8 @@ spring.activiti.async-executor-activate=false
 FLOW_LEAVE_KEY=32501
 #--------------------------配置跳过验证的URL---------------#
 ignore.auth.urls="/favicon.ico", "/login", "/login/page", "/webjars/**", "*.js", "*.css"
+#--------------------------log日志---------------#
+#配置输出日志文件
+#logging.config=classpath:log-config.xml
+#输出日志级别TARCE < DEBUG < INFO < WARN < ERROR < FATAL
+logging.level.root=INFO
