MD5加密/Aes加密（未完成）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,9 @@ ignore.auth.urls="/favicon.ico", "/login", "/login/page", "/webjars/**", "*.js",
 #logging.config=classpath:log-config.xml
 #输出日志级别TARCE < DEBUG < INFO < WARN < ERROR < FATAL
 logging.level.root=INFO
+
+
+
+#--------------------------支持jsp---------------#
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
