增加 josn web token

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -41,3 +41,5 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#######自定义参数#######
+app.constant.token.key=yangk-key
