--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,13 @@
             <version>2.6</version>
         </dependency>
 
+        <!-- json web token -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
